--- a/hatib_practical_machine-learning_project.html
+++ b/hatib_practical_machine-learning_project.html
@@ -177,7 +177,26 @@ cmGBM &lt;- confusionMatrix(predGBM, testing$classe)
 cmLDA &lt;- confusionMatrix(predLDA, testing$classe)
 results &lt;- data.frame(Model = c('Random Forest', 'Boosting', 'Linear Discriminant Analysis'),
                       Aaccuracy =rbind(cmRF$overall[1],cmGBM$overall[1],cmLDA$overall[1]))
-print(results)</code></pre>
+modelRF</code></pre>
+<pre><code>## Random Forest 
+## 
+## 13737 samples
+##    52 predictor
+##     5 classes: 'A', 'B', 'C', 'D', 'E' 
+## 
+## No pre-processing
+## Resampling: Cross-Validated (5 fold) 
+## Summary of sample sizes: 10989, 10991, 10989, 10989, 10990 
+## Resampling results across tuning parameters:
+## 
+##   mtry  Accuracy   Kappa    
+##    2    0.9900998  0.9874751
+##   27    0.9916284  0.9894102
+##   52    0.9857317  0.9819482
+## 
+## Accuracy was used to select the optimal model using  the largest value.
+## The final value used for the model was mtry = 27.</code></pre>
+<pre class="r"><code>print(results)</code></pre>
 <pre><code>##                          Model  Accuracy
 ## 1                Random Forest 0.9925234
 ## 2                     Boosting 0.9626168
@@ -189,7 +208,39 @@ print(results)</code></pre>
 <pre class="r"><code>predVal &lt;- predict(modelRF,newdata=validationData) # Predict new data
 predVal &lt;- data.frame(predVal) # Convert to data frame
 names(predVal) &lt;- c('Predicted Classe') # Name the column
-print(predVal)</code></pre>
+cmRF</code></pre>
+<pre><code>## Confusion Matrix and Statistics
+## 
+##           Reference
+## Prediction    A    B    C    D    E
+##          A 1673   11    0    0    0
+##          B    0 1123   11    0    0
+##          C    1    5 1011    5    1
+##          D    0    0    4  957    4
+##          E    0    0    0    2 1077
+## 
+## Overall Statistics
+##                                         
+##                Accuracy : 0.9925        
+##                  95% CI : (0.99, 0.9946)
+##     No Information Rate : 0.2845        
+##     P-Value [Acc &gt; NIR] : &lt; 2.2e-16     
+##                                         
+##                   Kappa : 0.9905        
+##  Mcnemar's Test P-Value : NA            
+## 
+## Statistics by Class:
+## 
+##                      Class: A Class: B Class: C Class: D Class: E
+## Sensitivity            0.9994   0.9860   0.9854   0.9927   0.9954
+## Specificity            0.9974   0.9977   0.9975   0.9984   0.9996
+## Pos Pred Value         0.9935   0.9903   0.9883   0.9917   0.9981
+## Neg Pred Value         0.9998   0.9966   0.9969   0.9986   0.9990
+## Prevalence             0.2845   0.1935   0.1743   0.1638   0.1839
+## Detection Rate         0.2843   0.1908   0.1718   0.1626   0.1830
+## Detection Prevalence   0.2862   0.1927   0.1738   0.1640   0.1833
+## Balanced Accuracy      0.9984   0.9918   0.9915   0.9956   0.9975</code></pre>
+<pre class="r"><code>print(predVal)</code></pre>
 <pre><code>##    Predicted Classe
 ## 1                 B
 ## 2                 A
